# PlanetFinder

./: .gitignore  Cargo.toml  ENGLISH.md  LICENSE  README.md  README_RU.md  download_data.py
src/: ai.rs  data.rs  main.rs  web.rs
static/: index.html
