[package]
name = "planet_finder"
version = "1.0.0"
authors = ["Ztry8 (AslanD)"] 
edition = "2024"
description = "A neural network that detects exoplanets from stellar light curves."
readme = "README.md"
repository = "https://github.com/ztry8/planetfinder"
license = "Apache-2.0"

[dependencies]
tch = "0.8"

[profile.release]
strip = true
debug = false
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
