[package]
name = "planet_finder"
version = "1.1.0"
authors = ["Ztry8 (AslanD)"] 
edition = "2024"
description = "A neural network that detects exoplanets from stellar light curves."
readme = "README.md"
repository = "https://github.com/ztry8/planetfinder"
license = "Apache-2.0"

[dependencies]
tch = "0.8"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
debug = false
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
